objects/Account.object
<CustomObject>
    <fields>
        <fullName>AVA_BLNG__Business_Identification_Number__c</fullName>
        <label>Business Identification No.(Deprecated)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Entity_Use_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Type of Entity/Use Code, if any, associated with this Account provided by Avalara. Optional Field.</description>
        <inlineHelpText>Type of Entity/Use Code, if any, associated with this Account. Optional Field.</inlineHelpText>
        <label>Entity/Use Code(Deprecated)</label>
        <referenceTo>AVA_BLNG__Entity_Use_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Exemption_Number__c</fullName>
        <description>This field will be used for AvaTax Exemption number</description>
        <inlineHelpText>Please enter exemption certification number, if any.</inlineHelpText>
        <label>Exemption Number(Deprecated)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Seller Importer Of Record(Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Business_Identification_Number__c</fullName>
        <inlineHelpText>Please enter your Business Identification / VAT Number. This will be used for reverse charge VAT calculations.</inlineHelpText>
        <label>Business Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Entity_Use_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Please select an entity use code (exemption reason) for this customer.</inlineHelpText>
        <label>Entity/Use code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Exemption_Number__c</fullName>
        <inlineHelpText>If you enter any data into this field their sales transactions will be exempt from sales tax.</inlineHelpText>
        <label>Exemption Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Seller is responsible for any import taxes and fees.</description>
        <inlineHelpText>If checked, Seller is responsible for any import taxes and fees</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <formula>Invoice_Balance__c +  Debit_Note_Balance__c - Credit_Note_Balance__c - Payment_Balance__c + Refund_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accounting_Finance_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Balance__c</fullName>
        <label>Credit Note Balance</label>
        <summarizedField>blng__CreditNote__c.blng__Balance__c</summarizedField>
        <summaryForeignKey>blng__CreditNote__c.blng__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Debit_Note_Balance__c</fullName>
        <label>Debit Note Balance</label>
        <summarizedField>blng__DebitNote__c.blng__Balance__c</summarizedField>
        <summaryForeignKey>blng__DebitNote__c.blng__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Generate_Transactional_Journal_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click to enable transactional journal creation at time of invoice posting.</description>
        <label>Generate Transactional Journal Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasParent__c</fullName>
        <formula>NOT(ISBLANK(ParentId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Balance__c</fullName>
        <label>Invoice Balance</label>
        <summarizedField>blng__Invoice__c.blng__Balance__c</summarizedField>
        <summaryForeignKey>blng__Invoice__c.blng__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>TEXT( Owner.Manager__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <formula>Parent.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Balance__c</fullName>
        <label>Payment Balance</label>
        <summarizedField>blng__Payment__c.blng__Balance__c</summarizedField>
        <summaryForeignKey>blng__Payment__c.blng__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Responsibility__c</fullName>
        <label>Payment Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                    <default>true</default>
                    <label>Self</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Balance__c</fullName>
        <label>Refund Balance</label>
        <summarizedField>blng__Refund__c.blng__Amount__c</summarizedField>
        <summaryForeignKey>blng__Refund__c.blng__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFBD__CollectionsAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that will be assigned any tasks and activities from a Collections Plan on this account.</description>
        <inlineHelpText>User that will be assigned any tasks and activities from a Collections Plan on this account.</inlineHelpText>
        <label>Collections Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__CollectionsPlanDate__c</fullName>
        <label>Collections Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFBD__CollectionsStatus__c</fullName>
        <inlineHelpText>Current Collections Status for this Account</inlineHelpText>
        <label>Collections Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Pending Collections</fullName>
                </value>
                <value>
                    <fullName>In Collections</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFBD__DunningMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dunning Method associated to the account. Used when the account&apos;s Collection Status is not current.</description>
        <inlineHelpText>Dunning Method that will be run when the account&apos;s Collection Status is not current.</inlineHelpText>
        <label>Dunning Method</label>
        <referenceTo>SFBD__DunningMethod__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFBD__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFBD__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CustomerProfileId__c</fullName>
        <label>Customer Profile Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DefaultPaymentType__c</fullName>
        <label>Default Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>SBQQ__AssetQuantitiesCombined__c</columns>
        <columns>SBQQ__CoTermedContractsCombined__c</columns>
        <columns>SBQQ__ContractCoTermination__c</columns>
        <columns>SBQQ__CoTerminationEvent__c</columns>
        <columns>SBQQ__RenewalModel__c</columns>
        <columns>SBQQ__RenewalPricingMethod__c</columns>
        <columns>SBQQ__PreserveBundle__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.IS_PARNTER</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SBQQ__DefaultOpportunity__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.IS_PARNTER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Partner Accounts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>